<resources>
    <string name="app_name">Starbucks</string>
    <string name="welcome_title">Selamat Datang di Starbucks</string>
    <string name="special_offer">Penawaran Khusus: Minuman Rp10.000 untuk Member Baru!</string>
    <string name="get_started">Mulai</string>
    <string name="terms_title">Syarat dan Ketentuan</string>
    <string name="agree">Setuju</string>
    <string name="phone_verification_title">Verifikasi Nomor Telepon</string>
    <string name="enter_phone">Masukkan nomor HP Anda</string>
    <string name="send_otp">Kirim OTP</string>
    <string name="otp_verification_title">Verifikasi OTP</string>
    <string name="enter_otp">Masukkan kode OTP yang dikirim ke nomor Anda</string>
    <string name="verify_otp">Verifikasi OTP</string>
    <string name="personal_info_title">Informasi Pribadi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="next">Selanjutnya</string>
    <string name="preferences_title">Preferensi (Opsional)</string>
    <string name="favorite_menu">Menu Favorit</string>
    <string name="referral_code">Kode Referral</string>
    <string name="sign_up">Daftar</string>
    <string name="welcome_home">Selamat Datang!</string>
    <string name="reward_claimed">Reward Rp10.000 telah ditambahkan ke akun Anda</string>
</resources>